# orchestra

./: .designer.md.swp  .gitignore  .ruff.toml  =4.1.0  DOCKER.md  Dockerfile  PROMPT_IMPROVEMENTS_SUMMARY.md  README.md  TEST_PLAN.md  TEST_RESULTS.md  commands.txt  designer.md  instructions.md  kerberos.py  launch.sh  monitor.md  prompt_analysis.md  pyproject.toml  test_orchestra_home_dir.py  test_pairing_feature.py  tmux_browser_app.py
.claude/commands/: merge-child.md
.github/workflows/: tests.yml
.orchestra/docs/: architecture.md  technical-trivia.md
cerb_code/: Dockerfile  kerberos.py  launch.py  launch.sh  mcp_server.py  monitor.py
cerb_code/backend/: mcp_server.py  monitor.py
cerb_code/frontend/: app.py  collected_logs_viewer.py  log_viewer_app.py  state.py
cerb_code/frontend/widgets/: diff_tab.py  hud.py  monitor_tab.py  session_list.py
cerb_code/lib/: agent_protocol.py  config.py  file_watcher.py  helpers.py  monitor.py  prompts.py  sessions.py  tmux.py  tmux_agent.py
cerb_code/runners/: __init__.py  collect_logs.py  hook_monitor.py  kerberos.py  launch.py  mcp_server.py  monitor.py  monitor_hook.sh  monitor_ui.py  setup.py  unified_ui.py
lib/: prompts.py  sessions.py  tmux_agent.py
orchestra/: Dockerfile  launch.py  launch.sh
orchestra/backend/: mcp_server.py  monitor.py
orchestra/frontend/: app.py  state.py
orchestra/frontend/widgets/: help_screen.py  hud.py  messages_tab.py  monitor_tab.py
orchestra/lib/: agent.py  config.py  file_watcher.py  helpers.py  logger.py  message.py  message_queue.py  monitor.py  prompts.py  sessions.py  tmux.py  tmux_agent.py  tmux_protocol.py
orchestra/lib/helpers/: __init__.py  docker.py  file_ops.py  git.py  tmux.py
orchestra/runners/: __init__.py  hook_monitor.py  launch.py  launcher.py  maestro.py  monitor_display.py  orchestra-hook-forward.sh  setup.py
tests/: conftest.py
tests/fixtures/config/: agents.yaml
tests/fixtures/custom_agents/: __init__.py  hello_agent.py
tests/integration/: test_custom_agents.py  test_docker_workflow.py  test_filesystem_ops.py  test_mcp_integration.py  test_message_queue.py
tests/unit/: test_agent_config.py
