[project]
name = "cerb-code"
version = "0.1.3"
description = "Terminal UI for managing multiple Claude sessions with tmux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=5.3.0",
    "mcp>=1.0.0",
]

[project.scripts]
cerb = "cerb_code.cerb_launcher:main"
cerb-sidebar = "cerb_code.kerberos:main"
cerb-monitor = "cerb_code.monitor:main"
cerb-mcp = "cerb_code.mcp_server:main"

[tool.setuptools]
packages = ["cerb_code", "lib"]

[tool.setuptools.package-data]
cerb_code = ["launch.sh"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
