[project]
name = "cerb-code"
version = "0.1.19"
description = "Terminal UI for managing multiple Claude sessions with tmux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual==5.3.0",
    "mcp>=1.0.0",
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
    "requests==2.30.0",
    "claude-agent-sdk>=0.1.0",
    "watchfiles>=0.24.0",
    "streamlit>=1.28.0",
]

[project.scripts]
cerb = "cerb_code.launch:main"
cerb-ui = "cerb_code.runners.kerberos:main"
cerb-monitor-server = "cerb_code.backend.monitor:main"
cerb-mcp = "cerb_code.backend.mcp_server:main"
cerb-hook = "cerb_code.runners.hook_monitor:main"
cerb-collect-logs = "cerb_code.runners.collect_logs:main"
cerb-logs-web = "cerb_code.frontend.log_viewer_app:main"
cerb-view-collected-logs = "cerb_code.frontend.collected_logs_viewer:main"

[tool.setuptools]
packages = ["cerb_code", "cerb_code.lib", "cerb_code.runners", "cerb_code.backend", "cerb_code.frontend", "cerb_code.frontend.widgets"]

[tool.setuptools.package-data]
cerb_code = ["Dockerfile"]
"cerb_code.runners" = ["cerb-hook-forward.sh"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
